fix: overflow body main pages

--- a/online-zoo/pages/main/sass/main.scss
+++ b/online-zoo/pages/main/sass/main.scss
@@ -13,6 +13,10 @@ html {
     margin: 0;
 }
 
+.body--active {
+    overflow: hidden;
+}
+
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
     padding: 0;
